@@ -6971,7 +6971,7 @@ struct aarch64_arch_option_table
    recognized by GCC.  */
 static const struct aarch64_arch_option_table aarch64_archs[] = {
   {"all", AARCH64_ANY},
-  {"armv8", AARCH64_ARCH_V8},
+  {"armv8-a", AARCH64_ARCH_V8},
   {NULL, AARCH64_ARCH_NONE}
 };
 
